# vue-drf-auth

./: .gitignore  README.md
backend/: pyproject.toml
backend/backend_api/backend_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend_api/core/: admin.py  models.py  urls.py
backend/backend_api/core/api/: serializers.py  viewsets.py
backend/backend_api/core/migrations/: 0001_initial.py  0002_auto_20210308_2009.py  0003_auto_20210308_2020.py
backend/insomnia/: Insomnia_2021-03-08.json
frontend/front-todo/: package-lock.json  package.json
frontend/front-todo/src/: App.vue  main.js
frontend/front-todo/src/components/: Login.vue  Navbar.vue  Todos.vue  api.js
frontend/front-todo/src/router/: index.js
